examen/y.output
Grammar

    0 $accept: programa $end

    1 programa: inicioTabla TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escritura_TS funciones end_funciones sentencias TOK_LLAVEDERECHA

    2 inicioTabla: %empty

    3 escritura_TS: %empty

    4 end_funciones: %empty

    5 declaraciones: declaracion
    6              | declaracion declaraciones

    7 declaracion: clase identificadores TOK_PUNTOYCOMA

    8 clase: clase_escalar
    9      | clase_vector

   10 clase_escalar: tipo

   11 tipo: TOK_INT
   12     | TOK_BOOLEAN

   13 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO TOK_CONSTANTE_ENTERA TOK_CORCHETEDERECHO

   14 identificadores: identificador
   15                | identificador TOK_COMA identificadores

   16 funciones: funcion funciones
   17          | %empty

   18 funcion: fn_declaration sentencias TOK_LLAVEDERECHA

   19 fn_name: TOK_FUNCTION tipo TOK_IDENTIFICADOR

   20 fn_declaration: fn_name TOK_PARENTESISIZQUIERDO parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

   21 parametros_funcion: parametro_funcion resto_parametros_funcion
   22                   | %empty

   23 resto_parametros_funcion: TOK_PUNTOYCOMA parametro_funcion resto_parametros_funcion
   24                         | %empty

   25 parametro_funcion: clase idpf

   26 idpf: TOK_IDENTIFICADOR

   27 declaraciones_funcion: declaraciones
   28                      | %empty

   29 sentencias: sentencia
   30           | sentencia sentencias

   31 sentencia: sentencia_simple TOK_PUNTOYCOMA
   32          | bloque

   33 sentencia_simple: asignacion
   34                 | lectura
   35                 | escritura
   36                 | retorno_funcion
   37                 | init_vector

   38 bloque: condicional
   39       | bucle

   40 asignacion: TOK_IDENTIFICADOR TOK_ASIGNACION exp
   41           | elemento_vector TOK_ASIGNACION exp

   42 elemento_vector: TOK_IDENTIFICADOR TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO

   43 val_lista: exp

   44 lista_vector: val_lista TOK_PUNTOYCOMA lista_vector
   45             | val_lista

   46 init_vector: principio_init TOK_LLAVEIZQUIERDA lista_vector TOK_LLAVEDERECHA

   47 principio_init: TOK_INIT TOK_IDENTIFICADOR

   48 condicional: if_exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA
   49            | if_else_exp TOK_ELSE TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

   50 if_exp: TOK_IF TOK_PARENTESISIZQUIERDO exp

   51 if_else_exp: if_exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

   52 bucle: bucle_exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

   53 bucle_exp: while exp

   54 while: TOK_WHILE TOK_PARENTESISIZQUIERDO

   55 lectura: TOK_SCANF TOK_IDENTIFICADOR

   56 escritura: TOK_PRINTF exp

   57 retorno_funcion: TOK_RETURN exp

   58 exp: exp TOK_MAS exp
   59    | exp TOK_MENOS exp
   60    | exp TOK_DIVISION exp
   61    | exp TOK_ASTERISCO exp
   62    | TOK_MENOS exp
   63    | exp TOK_AND exp
   64    | exp TOK_OR exp
   65    | TOK_NOT exp
   66    | TOK_IDENTIFICADOR
   67    | constante
   68    | TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO
   69    | TOK_PARENTESISIZQUIERDO comparacion TOK_PARENTESISDERECHO
   70    | elemento_vector
   71    | idf_llamada_funcion TOK_PARENTESISIZQUIERDO lista_expresiones TOK_PARENTESISDERECHO

   72 idf_llamada_funcion: TOK_IDENTIFICADOR

   73 lista_expresiones: exp resto_lista_expresiones
   74                  | %empty

   75 resto_lista_expresiones: TOK_COMA exp resto_lista_expresiones
   76                        | %empty

   77 comparacion: exp TOK_IGUAL exp
   78            | exp TOK_DISTINTO exp
   79            | exp TOK_MENORIGUAL exp
   80            | exp TOK_MAYORIGUAL exp
   81            | exp TOK_MENOR exp
   82            | exp TOK_MAYOR exp

   83 constante: constante_logica
   84          | constante_entera

   85 constante_logica: TOK_TRUE
   86                 | TOK_FALSE

   87 constante_entera: TOK_CONSTANTE_ENTERA

   88 identificador: TOK_IDENTIFICADOR


Terminals, with rules where they appear

$end (0) 0
error (256)
TOK_MAIN (258) 1
TOK_INT (259) 11
TOK_BOOLEAN (260) 12
TOK_ARRAY (261) 13
TOK_FUNCTION (262) 19
TOK_INIT (263) 47
TOK_IF (264) 50
TOK_ELSE (265) 49
TOK_WHILE (266) 54
TOK_SCANF (267) 55
TOK_PRINTF (268) 56
TOK_RETURN (269) 57
TOK_PUNTOYCOMA (270) 7 23 31 44
TOK_COMA (271) 15 75
TOK_PARENTESISIZQUIERDO (272) 20 50 54 68 69 71
TOK_PARENTESISDERECHO (273) 20 48 51 52 68 69 71
TOK_CORCHETEIZQUIERDO (274) 13 42
TOK_CORCHETEDERECHO (275) 13 42
TOK_LLAVEIZQUIERDA (276) 1 20 46 48 49 51 52
TOK_LLAVEDERECHA (277) 1 18 46 48 49 51 52
TOK_ASIGNACION (278) 40 41
TOK_MAS (279) 58
TOK_MENOS (280) 59 62
TOK_ASTERISCO (281) 61
TOK_DIVISION (282) 60
TOK_AND (283) 63
TOK_OR (284) 64
TOK_NOT (285) 65
TOK_IGUAL (286) 77
TOK_DISTINTO (287) 78
TOK_MENORIGUAL (288) 79
TOK_MAYORIGUAL (289) 80
TOK_MENOR (290) 81
TOK_MAYOR (291) 82
TOK_IDENTIFICADOR (292) 19 26 40 42 47 55 66 72 88
TOK_CONSTANTE_ENTERA (293) 13 87
TOK_TRUE (294) 85
TOK_FALSE (295) 86


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
programa (42)
    on left: 1, on right: 0
inicioTabla (43)
    on left: 2, on right: 1
escritura_TS (44)
    on left: 3, on right: 1
end_funciones (45)
    on left: 4, on right: 1
declaraciones (46)
    on left: 5 6, on right: 1 6 27
declaracion (47)
    on left: 7, on right: 5 6
clase (48)
    on left: 8 9, on right: 7 25
clase_escalar (49)
    on left: 10, on right: 8
tipo (50)
    on left: 11 12, on right: 10 13 19
clase_vector (51)
    on left: 13, on right: 9
identificadores (52)
    on left: 14 15, on right: 7 15
funciones (53)
    on left: 16 17, on right: 1 16
funcion (54)
    on left: 18, on right: 16
fn_name (55)
    on left: 19, on right: 20
fn_declaration (56)
    on left: 20, on right: 18
parametros_funcion (57)
    on left: 21 22, on right: 20
resto_parametros_funcion (58)
    on left: 23 24, on right: 21 23
parametro_funcion (59)
    on left: 25, on right: 21 23
idpf (60)
    on left: 26, on right: 25
declaraciones_funcion (61)
    on left: 27 28, on right: 20
sentencias (62)
    on left: 29 30, on right: 1 18 30 48 49 51 52
sentencia (63)
    on left: 31 32, on right: 29 30
sentencia_simple (64)
    on left: 33 34 35 36 37, on right: 31
bloque (65)
    on left: 38 39, on right: 32
asignacion (66)
    on left: 40 41, on right: 33
elemento_vector (67)
    on left: 42, on right: 41 70
val_lista (68)
    on left: 43, on right: 44 45
lista_vector (69)
    on left: 44 45, on right: 44 46
init_vector (70)
    on left: 46, on right: 37
principio_init (71)
    on left: 47, on right: 46
condicional (72)
    on left: 48 49, on right: 38
if_exp (73)
    on left: 50, on right: 48 51
if_else_exp (74)
    on left: 51, on right: 49
bucle (75)
    on left: 52, on right: 39
bucle_exp (76)
    on left: 53, on right: 52
while (77)
    on left: 54, on right: 53
lectura (78)
    on left: 55, on right: 34
escritura (79)
    on left: 56, on right: 35
retorno_funcion (80)
    on left: 57, on right: 36
exp (81)
    on left: 58 59 60 61 62 63 64 65 66 67 68 69 70 71, on right: 40
    41 42 43 50 53 56 57 58 59 60 61 62 63 64 65 68 73 75 77 78 79
    80 81 82
idf_llamada_funcion (82)
    on left: 72, on right: 71
lista_expresiones (83)
    on left: 73 74, on right: 71
resto_lista_expresiones (84)
    on left: 75 76, on right: 73 75
comparacion (85)
    on left: 77 78 79 80 81 82, on right: 69
constante (86)
    on left: 83 84, on right: 67
constante_logica (87)
    on left: 85 86, on right: 83
constante_entera (88)
    on left: 87, on right: 84
identificador (89)
    on left: 88, on right: 14 15


State 0

    0 $accept: . programa $end

    $default  reduce using rule 2 (inicioTabla)

    programa     go to state 1
    inicioTabla  go to state 2


State 1

    0 $accept: programa . $end

    $end  shift, and go to state 3


State 2

    1 programa: inicioTabla . TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escritura_TS funciones end_funciones sentencias TOK_LLAVEDERECHA

    TOK_MAIN  shift, and go to state 4


State 3

    0 $accept: programa $end .

    $default  accept


State 4

    1 programa: inicioTabla TOK_MAIN . TOK_LLAVEIZQUIERDA declaraciones escritura_TS funciones end_funciones sentencias TOK_LLAVEDERECHA

    TOK_LLAVEIZQUIERDA  shift, and go to state 5


State 5

    1 programa: inicioTabla TOK_MAIN TOK_LLAVEIZQUIERDA . declaraciones escritura_TS funciones end_funciones sentencias TOK_LLAVEDERECHA

    TOK_INT      shift, and go to state 6
    TOK_BOOLEAN  shift, and go to state 7
    TOK_ARRAY    shift, and go to state 8

    declaraciones  go to state 9
    declaracion    go to state 10
    clase          go to state 11
    clase_escalar  go to state 12
    tipo           go to state 13
    clase_vector   go to state 14


State 6

   11 tipo: TOK_INT .

    $default  reduce using rule 11 (tipo)


State 7

   12 tipo: TOK_BOOLEAN .

    $default  reduce using rule 12 (tipo)


State 8

   13 clase_vector: TOK_ARRAY . tipo TOK_CORCHETEIZQUIERDO TOK_CONSTANTE_ENTERA TOK_CORCHETEDERECHO

    TOK_INT      shift, and go to state 6
    TOK_BOOLEAN  shift, and go to state 7

    tipo  go to state 15


State 9

    1 programa: inicioTabla TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones . escritura_TS funciones end_funciones sentencias TOK_LLAVEDERECHA

    $default  reduce using rule 3 (escritura_TS)

    escritura_TS  go to state 16


State 10

    5 declaraciones: declaracion .
    6              | declaracion . declaraciones

    TOK_INT      shift, and go to state 6
    TOK_BOOLEAN  shift, and go to state 7
    TOK_ARRAY    shift, and go to state 8

    $default  reduce using rule 5 (declaraciones)

    declaraciones  go to state 17
    declaracion    go to state 10
    clase          go to state 11
    clase_escalar  go to state 12
    tipo           go to state 13
    clase_vector   go to state 14


State 11

    7 declaracion: clase . identificadores TOK_PUNTOYCOMA

    TOK_IDENTIFICADOR  shift, and go to state 18

    identificadores  go to state 19
    identificador    go to state 20


State 12

    8 clase: clase_escalar .

    $default  reduce using rule 8 (clase)


State 13

   10 clase_escalar: tipo .

    $default  reduce using rule 10 (clase_escalar)


State 14

    9 clase: clase_vector .

    $default  reduce using rule 9 (clase)


State 15

   13 clase_vector: TOK_ARRAY tipo . TOK_CORCHETEIZQUIERDO TOK_CONSTANTE_ENTERA TOK_CORCHETEDERECHO

    TOK_CORCHETEIZQUIERDO  shift, and go to state 21


State 16

    1 programa: inicioTabla TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escritura_TS . funciones end_funciones sentencias TOK_LLAVEDERECHA

    TOK_FUNCTION  shift, and go to state 22

    $default  reduce using rule 17 (funciones)

    funciones       go to state 23
    funcion         go to state 24
    fn_name         go to state 25
    fn_declaration  go to state 26


State 17

    6 declaraciones: declaracion declaraciones .

    $default  reduce using rule 6 (declaraciones)


State 18

   88 identificador: TOK_IDENTIFICADOR .

    $default  reduce using rule 88 (identificador)


State 19

    7 declaracion: clase identificadores . TOK_PUNTOYCOMA

    TOK_PUNTOYCOMA  shift, and go to state 27


State 20

   14 identificadores: identificador .
   15                | identificador . TOK_COMA identificadores

    TOK_COMA  shift, and go to state 28

    $default  reduce using rule 14 (identificadores)


State 21

   13 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO . TOK_CONSTANTE_ENTERA TOK_CORCHETEDERECHO

    TOK_CONSTANTE_ENTERA  shift, and go to state 29


State 22

   19 fn_name: TOK_FUNCTION . tipo TOK_IDENTIFICADOR

    TOK_INT      shift, and go to state 6
    TOK_BOOLEAN  shift, and go to state 7

    tipo  go to state 30


State 23

    1 programa: inicioTabla TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escritura_TS funciones . end_funciones sentencias TOK_LLAVEDERECHA

    $default  reduce using rule 4 (end_funciones)

    end_funciones  go to state 31


State 24

   16 funciones: funcion . funciones

    TOK_FUNCTION  shift, and go to state 22

    $default  reduce using rule 17 (funciones)

    funciones       go to state 32
    funcion         go to state 24
    fn_name         go to state 25
    fn_declaration  go to state 26


State 25

   20 fn_declaration: fn_name . TOK_PARENTESISIZQUIERDO parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

    TOK_PARENTESISIZQUIERDO  shift, and go to state 33


State 26

   18 funcion: fn_declaration . sentencias TOK_LLAVEDERECHA

    TOK_INIT           shift, and go to state 34
    TOK_IF             shift, and go to state 35
    TOK_WHILE          shift, and go to state 36
    TOK_SCANF          shift, and go to state 37
    TOK_PRINTF         shift, and go to state 38
    TOK_RETURN         shift, and go to state 39
    TOK_IDENTIFICADOR  shift, and go to state 40

    sentencias        go to state 41
    sentencia         go to state 42
    sentencia_simple  go to state 43
    bloque            go to state 44
    asignacion        go to state 45
    elemento_vector   go to state 46
    init_vector       go to state 47
    principio_init    go to state 48
    condicional       go to state 49
    if_exp            go to state 50
    if_else_exp       go to state 51
    bucle             go to state 52
    bucle_exp         go to state 53
    while             go to state 54
    lectura           go to state 55
    escritura         go to state 56
    retorno_funcion   go to state 57


State 27

    7 declaracion: clase identificadores TOK_PUNTOYCOMA .

    $default  reduce using rule 7 (declaracion)


State 28

   15 identificadores: identificador TOK_COMA . identificadores

    TOK_IDENTIFICADOR  shift, and go to state 18

    identificadores  go to state 58
    identificador    go to state 20


State 29

   13 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO TOK_CONSTANTE_ENTERA . TOK_CORCHETEDERECHO

    TOK_CORCHETEDERECHO  shift, and go to state 59


State 30

   19 fn_name: TOK_FUNCTION tipo . TOK_IDENTIFICADOR

    TOK_IDENTIFICADOR  shift, and go to state 60


State 31

    1 programa: inicioTabla TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escritura_TS funciones end_funciones . sentencias TOK_LLAVEDERECHA

    TOK_INIT           shift, and go to state 34
    TOK_IF             shift, and go to state 35
    TOK_WHILE          shift, and go to state 36
    TOK_SCANF          shift, and go to state 37
    TOK_PRINTF         shift, and go to state 38
    TOK_RETURN         shift, and go to state 39
    TOK_IDENTIFICADOR  shift, and go to state 40

    sentencias        go to state 61
    sentencia         go to state 42
    sentencia_simple  go to state 43
    bloque            go to state 44
    asignacion        go to state 45
    elemento_vector   go to state 46
    init_vector       go to state 47
    principio_init    go to state 48
    condicional       go to state 49
    if_exp            go to state 50
    if_else_exp       go to state 51
    bucle             go to state 52
    bucle_exp         go to state 53
    while             go to state 54
    lectura           go to state 55
    escritura         go to state 56
    retorno_funcion   go to state 57


State 32

   16 funciones: funcion funciones .

    $default  reduce using rule 16 (funciones)


State 33

   20 fn_declaration: fn_name TOK_PARENTESISIZQUIERDO . parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

    TOK_INT      shift, and go to state 6
    TOK_BOOLEAN  shift, and go to state 7
    TOK_ARRAY    shift, and go to state 8

    $default  reduce using rule 22 (parametros_funcion)

    clase               go to state 62
    clase_escalar       go to state 12
    tipo                go to state 13
    clase_vector        go to state 14
    parametros_funcion  go to state 63
    parametro_funcion   go to state 64


State 34

   47 principio_init: TOK_INIT . TOK_IDENTIFICADOR

    TOK_IDENTIFICADOR  shift, and go to state 65


State 35

   50 if_exp: TOK_IF . TOK_PARENTESISIZQUIERDO exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 66


State 36

   54 while: TOK_WHILE . TOK_PARENTESISIZQUIERDO

    TOK_PARENTESISIZQUIERDO  shift, and go to state 67


State 37

   55 lectura: TOK_SCANF . TOK_IDENTIFICADOR

    TOK_IDENTIFICADOR  shift, and go to state 68


State 38

   56 escritura: TOK_PRINTF . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 69
    TOK_MENOS                shift, and go to state 70
    TOK_NOT                  shift, and go to state 71
    TOK_IDENTIFICADOR        shift, and go to state 72
    TOK_CONSTANTE_ENTERA     shift, and go to state 73
    TOK_TRUE                 shift, and go to state 74
    TOK_FALSE                shift, and go to state 75

    elemento_vector      go to state 76
    exp                  go to state 77
    idf_llamada_funcion  go to state 78
    constante            go to state 79
    constante_logica     go to state 80
    constante_entera     go to state 81


State 39

   57 retorno_funcion: TOK_RETURN . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 69
    TOK_MENOS                shift, and go to state 70
    TOK_NOT                  shift, and go to state 71
    TOK_IDENTIFICADOR        shift, and go to state 72
    TOK_CONSTANTE_ENTERA     shift, and go to state 73
    TOK_TRUE                 shift, and go to state 74
    TOK_FALSE                shift, and go to state 75

    elemento_vector      go to state 76
    exp                  go to state 82
    idf_llamada_funcion  go to state 78
    constante            go to state 79
    constante_logica     go to state 80
    constante_entera     go to state 81


State 40

   40 asignacion: TOK_IDENTIFICADOR . TOK_ASIGNACION exp
   42 elemento_vector: TOK_IDENTIFICADOR . TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO

    TOK_CORCHETEIZQUIERDO  shift, and go to state 83
    TOK_ASIGNACION         shift, and go to state 84


State 41

   18 funcion: fn_declaration sentencias . TOK_LLAVEDERECHA

    TOK_LLAVEDERECHA  shift, and go to state 85


State 42

   29 sentencias: sentencia .
   30           | sentencia . sentencias

    TOK_INIT           shift, and go to state 34
    TOK_IF             shift, and go to state 35
    TOK_WHILE          shift, and go to state 36
    TOK_SCANF          shift, and go to state 37
    TOK_PRINTF         shift, and go to state 38
    TOK_RETURN         shift, and go to state 39
    TOK_IDENTIFICADOR  shift, and go to state 40

    $default  reduce using rule 29 (sentencias)

    sentencias        go to state 86
    sentencia         go to state 42
    sentencia_simple  go to state 43
    bloque            go to state 44
    asignacion        go to state 45
    elemento_vector   go to state 46
    init_vector       go to state 47
    principio_init    go to state 48
    condicional       go to state 49
    if_exp            go to state 50
    if_else_exp       go to state 51
    bucle             go to state 52
    bucle_exp         go to state 53
    while             go to state 54
    lectura           go to state 55
    escritura         go to state 56
    retorno_funcion   go to state 57


State 43

   31 sentencia: sentencia_simple . TOK_PUNTOYCOMA

    TOK_PUNTOYCOMA  shift, and go to state 87


State 44

   32 sentencia: bloque .

    $default  reduce using rule 32 (sentencia)


State 45

   33 sentencia_simple: asignacion .

    $default  reduce using rule 33 (sentencia_simple)


State 46

   41 asignacion: elemento_vector . TOK_ASIGNACION exp

    TOK_ASIGNACION  shift, and go to state 88


State 47

   37 sentencia_simple: init_vector .

    $default  reduce using rule 37 (sentencia_simple)


State 48

   46 init_vector: principio_init . TOK_LLAVEIZQUIERDA lista_vector TOK_LLAVEDERECHA

    TOK_LLAVEIZQUIERDA  shift, and go to state 89


State 49

   38 bloque: condicional .

    $default  reduce using rule 38 (bloque)


State 50

   48 condicional: if_exp . TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA
   51 if_else_exp: if_exp . TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_PARENTESISDERECHO  shift, and go to state 90


State 51

   49 condicional: if_else_exp . TOK_ELSE TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_ELSE  shift, and go to state 91


State 52

   39 bloque: bucle .

    $default  reduce using rule 39 (bloque)


State 53

   52 bucle: bucle_exp . TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_PARENTESISDERECHO  shift, and go to state 92


State 54

   53 bucle_exp: while . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 69
    TOK_MENOS                shift, and go to state 70
    TOK_NOT                  shift, and go to state 71
    TOK_IDENTIFICADOR        shift, and go to state 72
    TOK_CONSTANTE_ENTERA     shift, and go to state 73
    TOK_TRUE                 shift, and go to state 74
    TOK_FALSE                shift, and go to state 75

    elemento_vector      go to state 76
    exp                  go to state 93
    idf_llamada_funcion  go to state 78
    constante            go to state 79
    constante_logica     go to state 80
    constante_entera     go to state 81


State 55

   34 sentencia_simple: lectura .

    $default  reduce using rule 34 (sentencia_simple)


State 56

   35 sentencia_simple: escritura .

    $default  reduce using rule 35 (sentencia_simple)


State 57

   36 sentencia_simple: retorno_funcion .

    $default  reduce using rule 36 (sentencia_simple)


State 58

   15 identificadores: identificador TOK_COMA identificadores .

    $default  reduce using rule 15 (identificadores)


State 59

   13 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO TOK_CONSTANTE_ENTERA TOK_CORCHETEDERECHO .

    $default  reduce using rule 13 (clase_vector)


State 60

   19 fn_name: TOK_FUNCTION tipo TOK_IDENTIFICADOR .

    $default  reduce using rule 19 (fn_name)


State 61

    1 programa: inicioTabla TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escritura_TS funciones end_funciones sentencias . TOK_LLAVEDERECHA

    TOK_LLAVEDERECHA  shift, and go to state 94


State 62

   25 parametro_funcion: clase . idpf

    TOK_IDENTIFICADOR  shift, and go to state 95

    idpf  go to state 96


State 63

   20 fn_declaration: fn_name TOK_PARENTESISIZQUIERDO parametros_funcion . TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

    TOK_PARENTESISDERECHO  shift, and go to state 97


State 64

   21 parametros_funcion: parametro_funcion . resto_parametros_funcion

    TOK_PUNTOYCOMA  shift, and go to state 98

    $default  reduce using rule 24 (resto_parametros_funcion)

    resto_parametros_funcion  go to state 99


State 65

   47 principio_init: TOK_INIT TOK_IDENTIFICADOR .

    $default  reduce using rule 47 (principio_init)


State 66

   50 if_exp: TOK_IF TOK_PARENTESISIZQUIERDO . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 69
    TOK_MENOS                shift, and go to state 70
    TOK_NOT                  shift, and go to state 71
    TOK_IDENTIFICADOR        shift, and go to state 72
    TOK_CONSTANTE_ENTERA     shift, and go to state 73
    TOK_TRUE                 shift, and go to state 74
    TOK_FALSE                shift, and go to state 75

    elemento_vector      go to state 76
    exp                  go to state 100
    idf_llamada_funcion  go to state 78
    constante            go to state 79
    constante_logica     go to state 80
    constante_entera     go to state 81


State 67

   54 while: TOK_WHILE TOK_PARENTESISIZQUIERDO .

    $default  reduce using rule 54 (while)


State 68

   55 lectura: TOK_SCANF TOK_IDENTIFICADOR .

    $default  reduce using rule 55 (lectura)


State 69

   68 exp: TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO
   69    | TOK_PARENTESISIZQUIERDO . comparacion TOK_PARENTESISDERECHO

    TOK_PARENTESISIZQUIERDO  shift, and go to state 69
    TOK_MENOS                shift, and go to state 70
    TOK_NOT                  shift, and go to state 71
    TOK_IDENTIFICADOR        shift, and go to state 72
    TOK_CONSTANTE_ENTERA     shift, and go to state 73
    TOK_TRUE                 shift, and go to state 74
    TOK_FALSE                shift, and go to state 75

    elemento_vector      go to state 76
    exp                  go to state 101
    idf_llamada_funcion  go to state 78
    comparacion          go to state 102
    constante            go to state 79
    constante_logica     go to state 80
    constante_entera     go to state 81


State 70

   62 exp: TOK_MENOS . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 69
    TOK_MENOS                shift, and go to state 70
    TOK_NOT                  shift, and go to state 71
    TOK_IDENTIFICADOR        shift, and go to state 72
    TOK_CONSTANTE_ENTERA     shift, and go to state 73
    TOK_TRUE                 shift, and go to state 74
    TOK_FALSE                shift, and go to state 75

    elemento_vector      go to state 76
    exp                  go to state 103
    idf_llamada_funcion  go to state 78
    constante            go to state 79
    constante_logica     go to state 80
    constante_entera     go to state 81


State 71

   65 exp: TOK_NOT . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 69
    TOK_MENOS                shift, and go to state 70
    TOK_NOT                  shift, and go to state 71
    TOK_IDENTIFICADOR        shift, and go to state 72
    TOK_CONSTANTE_ENTERA     shift, and go to state 73
    TOK_TRUE                 shift, and go to state 74
    TOK_FALSE                shift, and go to state 75

    elemento_vector      go to state 76
    exp                  go to state 104
    idf_llamada_funcion  go to state 78
    constante            go to state 79
    constante_logica     go to state 80
    constante_entera     go to state 81


State 72

   42 elemento_vector: TOK_IDENTIFICADOR . TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO
   66 exp: TOK_IDENTIFICADOR .
   72 idf_llamada_funcion: TOK_IDENTIFICADOR .

    TOK_CORCHETEIZQUIERDO  shift, and go to state 83

    TOK_PARENTESISIZQUIERDO  reduce using rule 72 (idf_llamada_funcion)
    $default                 reduce using rule 66 (exp)


State 73

   87 constante_entera: TOK_CONSTANTE_ENTERA .

    $default  reduce using rule 87 (constante_entera)


State 74

   85 constante_logica: TOK_TRUE .

    $default  reduce using rule 85 (constante_logica)


State 75

   86 constante_logica: TOK_FALSE .

    $default  reduce using rule 86 (constante_logica)


State 76

   70 exp: elemento_vector .

    $default  reduce using rule 70 (exp)


State 77

   56 escritura: TOK_PRINTF exp .
   58 exp: exp . TOK_MAS exp
   59    | exp . TOK_MENOS exp
   60    | exp . TOK_DIVISION exp
   61    | exp . TOK_ASTERISCO exp
   63    | exp . TOK_AND exp
   64    | exp . TOK_OR exp

    TOK_MAS        shift, and go to state 105
    TOK_MENOS      shift, and go to state 106
    TOK_ASTERISCO  shift, and go to state 107
    TOK_DIVISION   shift, and go to state 108
    TOK_AND        shift, and go to state 109
    TOK_OR         shift, and go to state 110

    $default  reduce using rule 56 (escritura)


State 78

   71 exp: idf_llamada_funcion . TOK_PARENTESISIZQUIERDO lista_expresiones TOK_PARENTESISDERECHO

    TOK_PARENTESISIZQUIERDO  shift, and go to state 111


State 79

   67 exp: constante .

    $default  reduce using rule 67 (exp)


State 80

   83 constante: constante_logica .

    $default  reduce using rule 83 (constante)


State 81

   84 constante: constante_entera .

    $default  reduce using rule 84 (constante)


State 82

   57 retorno_funcion: TOK_RETURN exp .
   58 exp: exp . TOK_MAS exp
   59    | exp . TOK_MENOS exp
   60    | exp . TOK_DIVISION exp
   61    | exp . TOK_ASTERISCO exp
   63    | exp . TOK_AND exp
   64    | exp . TOK_OR exp

    TOK_MAS        shift, and go to state 105
    TOK_MENOS      shift, and go to state 106
    TOK_ASTERISCO  shift, and go to state 107
    TOK_DIVISION   shift, and go to state 108
    TOK_AND        shift, and go to state 109
    TOK_OR         shift, and go to state 110

    $default  reduce using rule 57 (retorno_funcion)


State 83

   42 elemento_vector: TOK_IDENTIFICADOR TOK_CORCHETEIZQUIERDO . exp TOK_CORCHETEDERECHO

    TOK_PARENTESISIZQUIERDO  shift, and go to state 69
    TOK_MENOS                shift, and go to state 70
    TOK_NOT                  shift, and go to state 71
    TOK_IDENTIFICADOR        shift, and go to state 72
    TOK_CONSTANTE_ENTERA     shift, and go to state 73
    TOK_TRUE                 shift, and go to state 74
    TOK_FALSE                shift, and go to state 75

    elemento_vector      go to state 76
    exp                  go to state 112
    idf_llamada_funcion  go to state 78
    constante            go to state 79
    constante_logica     go to state 80
    constante_entera     go to state 81


State 84

   40 asignacion: TOK_IDENTIFICADOR TOK_ASIGNACION . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 69
    TOK_MENOS                shift, and go to state 70
    TOK_NOT                  shift, and go to state 71
    TOK_IDENTIFICADOR        shift, and go to state 72
    TOK_CONSTANTE_ENTERA     shift, and go to state 73
    TOK_TRUE                 shift, and go to state 74
    TOK_FALSE                shift, and go to state 75

    elemento_vector      go to state 76
    exp                  go to state 113
    idf_llamada_funcion  go to state 78
    constante            go to state 79
    constante_logica     go to state 80
    constante_entera     go to state 81


State 85

   18 funcion: fn_declaration sentencias TOK_LLAVEDERECHA .

    $default  reduce using rule 18 (funcion)


State 86

   30 sentencias: sentencia sentencias .

    $default  reduce using rule 30 (sentencias)


State 87

   31 sentencia: sentencia_simple TOK_PUNTOYCOMA .

    $default  reduce using rule 31 (sentencia)


State 88

   41 asignacion: elemento_vector TOK_ASIGNACION . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 69
    TOK_MENOS                shift, and go to state 70
    TOK_NOT                  shift, and go to state 71
    TOK_IDENTIFICADOR        shift, and go to state 72
    TOK_CONSTANTE_ENTERA     shift, and go to state 73
    TOK_TRUE                 shift, and go to state 74
    TOK_FALSE                shift, and go to state 75

    elemento_vector      go to state 76
    exp                  go to state 114
    idf_llamada_funcion  go to state 78
    constante            go to state 79
    constante_logica     go to state 80
    constante_entera     go to state 81


State 89

   46 init_vector: principio_init TOK_LLAVEIZQUIERDA . lista_vector TOK_LLAVEDERECHA

    TOK_PARENTESISIZQUIERDO  shift, and go to state 69
    TOK_MENOS                shift, and go to state 70
    TOK_NOT                  shift, and go to state 71
    TOK_IDENTIFICADOR        shift, and go to state 72
    TOK_CONSTANTE_ENTERA     shift, and go to state 73
    TOK_TRUE                 shift, and go to state 74
    TOK_FALSE                shift, and go to state 75
